--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -1,117 +1,36 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#18b464"
-    android:padding="16dp"
-    tools:context=".ResultActivity">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" tools:context=".ResultActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/best_suited_crops_for_your_soil"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:textColor="@color/white"
-        android:layout_marginBottom="16dp"
-        android:letterSpacing="0.05"
-        android:fontFamily="sans-serif-medium"
-        android:paddingTop="24dp"/>
+    <LinearLayout android:id="@+id/main" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:background="#18b464" android:padding="16dp">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:fillViewport="true">
+        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:background="#18b464" android:padding="10dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            <TextView android:id="@+id/locationTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Location" android:textSize="18sp" android:textColor="@color/white" android:layout_alignParentEnd="true" android:layout_marginEnd="16dp" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="center_horizontal"
-                android:layout_marginTop="16dp">
+        </RelativeLayout>
+        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/best_suited_crops_for_your_soil" android:textSize="24sp" android:textStyle="bold" android:textColor="@color/white" android:layout_marginBottom="16dp" android:letterSpacing="0.05" android:fontFamily="sans-serif-medium" android:paddingTop="10dp"/>
 
-                <ImageView
-                    android:id="@+id/imageView1"
-                    android:layout_width="200dp"
-                    android:layout_height="200dp"
-                    android:adjustViewBounds="true"
-                    android:scaleType="centerCrop" />
+        <ScrollView android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:fillViewport="true">
 
-                <TextView
-                    android:id="@+id/textView1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Crop name"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    android:layout_marginTop="8dp" />
+            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
 
-            </LinearLayout>
+                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:gravity="center_horizontal" android:layout_marginTop="16dp">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="center_horizontal"
-                android:layout_marginTop="16dp">
+                    <ImageView android:id="@+id/imageView1" android:layout_width="200dp" android:layout_height="200dp" android:adjustViewBounds="true" android:scaleType="centerCrop" />
 
-                <ImageView
-                    android:id="@+id/imageView2"
-                    android:adjustViewBounds="true"
-                    android:layout_width="200dp"
-                    android:layout_height="200dp"
-                    android:scaleType="centerCrop" />
+                    <TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Crop name" android:textColor="@color/black" android:textSize="18sp" android:layout_marginTop="8dp" />
 
-                <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Crop name"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    android:layout_marginTop="8dp" />
+                </LinearLayout>
+                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:gravity="center_horizontal" android:layout_marginTop="16dp">
 
-            </LinearLayout>
+                    <ImageView android:id="@+id/imageView2" android:adjustViewBounds="true" android:layout_width="200dp" android:layout_height="200dp" android:scaleType="centerCrop" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="center_horizontal"
-                android:layout_marginTop="16dp">
+                    <TextView android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Crop name" android:textColor="@color/black" android:textSize="18sp" android:layout_marginTop="8dp" />
 
-                <ImageView
-                    android:id="@+id/imageView3"
-                    android:layout_width="200dp"
-                    android:layout_height="200dp"
-                    android:adjustViewBounds="true"
-                    android:scaleType="centerCrop" />
+                </LinearLayout>
+                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:gravity="center_horizontal" android:layout_marginTop="16dp">
 
-                <TextView
-                    android:id="@+id/textView3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Crop name"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    android:layout_marginTop="8dp" />
+                    <ImageView android:id="@+id/imageView3" android:layout_width="200dp" android:layout_height="200dp" android:adjustViewBounds="true" android:scaleType="centerCrop" />
 
-            </LinearLayout>
+                    <TextView android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Crop name" android:textColor="@color/black" android:textSize="18sp" android:layout_marginTop="8dp" />
 
-
-
-        </LinearLayout>
-
-    </ScrollView>
-
-</LinearLayout>
+                </LinearLayout> </LinearLayout> </ScrollView> </LinearLayout> </ScrollView>
