--- a/app/src/main/res/layout/activity_analysis.xml
+++ b/app/src/main/res/layout/activity_analysis.xml
@@ -1,14 +1,14 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true">
+    android:fillViewport="true"
+    android:background="@drawable/weatherbg">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp"
-        android:background="@drawable/weatherbg">
+        android:padding="16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -68,6 +68,14 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_gravity="center_vertical">
+                <TextView
+                    android:id="@+id/date_day1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Date"
+                    android:textColor="#666666"
+                    android:textStyle="bold"
+                    android:textSize="16sp" />
 
                 <ImageView
                     android:id="@+id/day1_image"
@@ -81,9 +89,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Broken Clouds"
-                    android:textColor="#666666"
+                    android:textColor="@color/white"
                     android:layout_gravity="center"
-                    android:textSize="16sp" />
+                    android:textSize="18sp" />
                 <TextView
                     android:id="@+id/temperatureText_day1"
                     android:layout_width="wrap_content"
@@ -125,28 +133,30 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="16dp"
                 android:background="#DDDDDD" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="left"
+                    android:fontFamily="sans-serif-condensed-medium"
+                    android:text="Forecast"
+                    android:textColor="@color/white"
+                    android:textSize="22sp" />
+
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/date_day1"
+                android:id="@+id/date_day2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Date"
+                android:paddingTop="2dp"
                 android:textColor="#666666"
-                android:textSize="14sp" />
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="left"
-                android:fontFamily="sans-serif-condensed-medium"
-                android:text="4 Day Forecast"
-                android:textColor="@color/white"
-                android:textSize="22sp" />
+                android:textStyle="bold"
+                android:textSize="16sp" />
 
         </LinearLayout>
         <GridLayout
@@ -183,9 +193,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Broken Clouds"
-                        android:textColor="#666666"
+                        android:textColor="@color/white"
                         android:layout_gravity="center"
-                        android:textSize="16sp" />
+                        android:textSize="18sp" />
                     <TextView
                         android:id="@+id/temperatureText_day2"
                         android:layout_width="wrap_content"
@@ -229,12 +239,13 @@
                     android:background="#DDDDDD" />
 
                 <TextView
-                    android:id="@+id/date_day2"
+                    android:id="@+id/date_day3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Date"
                     android:textColor="#666666"
-                    android:textSize="14sp" />
+                    android:textStyle="bold"
+                    android:textSize="16sp" />
 
             </LinearLayout>
             <LinearLayout
@@ -261,9 +272,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Broken Clouds"
-                        android:textColor="#666666"
+                        android:textColor="@color/white"
                         android:layout_gravity="center"
-                        android:textSize="16sp" />
+                        android:textSize="18sp" />
                     <TextView
                         android:id="@+id/temperatureText_day3"
                         android:layout_width="wrap_content"
@@ -307,12 +318,13 @@
                     android:background="#DDDDDD" />
 
                 <TextView
-                    android:id="@+id/date_day3"
+                    android:id="@+id/date_day4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Date"
                     android:textColor="#666666"
-                    android:textSize="14sp" />
+                    android:textStyle="bold"
+                    android:textSize="16sp" />
 
             </LinearLayout>
             <LinearLayout
@@ -338,9 +350,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Broken Clouds"
-                        android:textColor="#666666"
+                        android:textColor="@color/white"
                         android:layout_gravity="center"
-                        android:textSize="16sp" />
+                        android:textSize="18sp" />
                     <TextView
                         android:id="@+id/temperatureText_day4"
                         android:layout_width="wrap_content"
@@ -384,12 +396,13 @@
                     android:background="#DDDDDD" />
 
                 <TextView
-                    android:id="@+id/date_day4"
+                    android:id="@+id/date_day5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Date"
                     android:textColor="#666666"
-                    android:textSize="14sp" />
+                    android:textStyle="bold"
+                    android:textSize="16sp" />
 
             </LinearLayout>
             <LinearLayout
@@ -415,9 +428,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Broken Clouds"
-                        android:textColor="#666666"
+                        android:textColor="@color/white"
                         android:layout_gravity="center"
-                        android:textSize="16sp" />
+                        android:textSize="18sp" />
                     <TextView
                         android:id="@+id/temperatureText_day5"
                         android:layout_width="wrap_content"
@@ -450,23 +463,6 @@
                         android:textSize="16sp" />
 
                 </LinearLayout>
-
-
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="16dp"
-                    android:background="#DDDDDD" />
-
-                <TextView
-                    android:id="@+id/date_day5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Date"
-                    android:textColor="#666666"
-                    android:textSize="14sp" />
 
             </LinearLayout>
 <!--            <LinearLayout-->
