--- a/app/src/main/res/layout/activity_udetails.xml
+++ b/app/src/main/res/layout/activity_udetails.xml
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-condensed-light"
-        android:text="Add Harvest Details"
+        android:text="@string/add_harvest_detail"
         android:textAlignment="center"
         android:textColor="#FFFF"
         android:textSize="35dp"
@@ -41,7 +41,7 @@
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:background="@drawable/round"
-        android:hint="Month &amp; year of harvest"
+        android:hint="@string/month_amp_year_of_harvest"
         android:paddingLeft="20dp"
         android:paddingRight="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -55,7 +55,7 @@
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:background="@drawable/round"
-        android:hint="Crop type"
+        android:hint="@string/crop_name"
         android:paddingLeft="20dp"
         android:paddingRight="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -69,7 +69,7 @@
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:background="@drawable/round"
-        android:hint="Approx production in (Tonnes)"
+        android:hint="@string/approx_production_in_tonnes"
         android:paddingLeft="20dp"
         android:paddingRight="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -83,7 +83,7 @@
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:background="@drawable/round"
-        android:hint="Region"
+        android:hint="@string/region"
         android:paddingLeft="20dp"
         android:paddingRight="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -97,7 +97,7 @@
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:background="@drawable/round"
-        android:hint="Area under cultivation in (Acres)"
+        android:hint="@string/area_under_cultivation_in_acres"
         android:paddingLeft="20dp"
         android:paddingRight="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -110,7 +110,7 @@
         android:id="@+id/btnadd"
         android:layout_width="130dp"
         android:layout_height="55dp"
-        android:text="Add Details"
+        android:text="@string/add_details"
         android:textAllCaps="false"
         android:textSize="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
