--- a/app/src/main/res/layout/activity_analysis.xml
+++ b/app/src/main/res/layout/activity_analysis.xml
@@ -142,7 +142,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="left"
                     android:fontFamily="sans-serif-condensed-medium"
-                    android:text="Forecast"
+                    android:text="@string/forecast"
                     android:textColor="@color/white"
                     android:textSize="22sp" />
 
