--- a/app/src/main/res/layout/activity_ydetails.xml
+++ b/app/src/main/res/layout/activity_ydetails.xml
@@ -15,7 +15,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:title="All Harvest Details"
+        app:title="@string/all_harvest_details"
         app:titleTextColor="#FDFEFE"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp" />
